feat: track scripted and graph lead finders
Co-authored-by: TalaatHarb <6714248+TalaatHarb@users.noreply.github.com>